# zhimengji

./: .gitignore  AUTO_PILOT_PATCH_REPORT.md  BLOCKED_REASON.md  CONTEXT.md  README.md  REVIEW_V20H_TECH_LEAD_VERDICT.json  ROUND_A_REPORT.md  ROUND_B_CLOSURE.md  ROUND_B_REPORT.md  ROUND_C_REPORT.md  ROUND_D_REPORT.md  TASK_V20H_01_AI_TRISTATE_ROUTER.md  TASK_V20H_01_REPORT.md  TASK_V20H_02_DRIVER_E2E.md  TASK_V20H_02_REPORT.md  V2_0_1_GATE_REPORT.md  V2_0_1_REPORT.md  V2_0_1_SCOPE_FREEZE_PLAN.md  V2_0_2_GATE_REPORT.md  V2_0_2_REPORT.md  V2_0_2_SCOPE_FREEZE_PLAN.md  V2_0_H_REPORT.md  V2_0_H_SCOPE_FREEZE_PLAN.md  V2_0_H_VERDICT.json  V2_1_0_GATE_REPORT.md  V2_1_0_REPORT.md  V2_1_0_SCOPE_FREEZE_PLAN.md  V2_1_1_AI_GATE_REPORT.md  V2_1_1_AI_KEY_PERSISTENCE_PATCH_REPORT.md  V2_1_1_AI_REPORT.md  V2_1_1_AI_SCOPE_FREEZE_PLAN.md  V2_1_1_AUDIT_REPORT.md  V2_1_1_COMPLETE_REPORT.md  V2_1_1_GATE_REVIEW.md  V2_1_1_PATCH_TIMESTAMP_API_REPORT.md  V2_1_1_REPORT.md  V2_1_1_REPORT_T001.md  V2_1_1_REPORT_T002.md  V2_1_1_REPORT_T003.md  V2_1_1_REPORT_T004.md  (+36 more)
src-tauri/: Cargo.toml  libtest_mls3.rlib  tauri.conf.json
src-tauri/src/: ai_commands.rs  byok_commands.rs  chapter_packet_commands.rs  commands.rs  db.rs  decision_log_commands.rs  export_commands.rs  feedback_commands.rs  lib.rs  main.rs  models.rs  pipeline_commands.rs  premise_commands.rs  quick_draft_commands.rs  setting_commands.rs  structure_commands.rs  transform_db.cjs  transform_db.py
src-tauri/src/ai/: context_builder.rs  mod.rs  skill_registry.rs  structured_parser.rs
src-tauri/src/byok/: key_manager.rs  llm_client.rs  (+2 more)
(+528 files in other folders)
