[package]
name = "zhimengji"
version = "0.0.1"
description = "缁囨ⅵ鏈?- AI-native content creation platform"
authors = ["Chancellor OS"]
edition = "2021"

[lib]
name = "zhimengji_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
zip = "2"
